home aboutus banner

--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,23 +1,66 @@
+@media screen and (max-width: 1400px) { 
+    .bg2 {
+        width: 100% !important;
+        height: 220% !important;
+        top: 24% !important;
+    }
+    .bg3 {
+        width: 100% !important;
+        height: 100% !important;
+        top: 1250px !important;
+        background-size: contain !important;
+    }
+    .dino-twin {
+        margin-top: 385px !important;
+    }
+    .Dilophosaurus {
+        margin-top: -775px !important;
+    }
+    .head-box {
+        margin-left: 50px !important;
+        margin-right: 50px !important;
+    }
+    .text2-box {
+        margin-top: 750px !important;
+        margin-left: 50px !important;
+        margin-right: 50px !important;
+    }
+    .e-group { 
+        margin-left: 50px !important;
+        margin-right: 50px !important;
+    }
+}
+@media screen and (max-width: 1242px) {
+    .bg3 {
+        width: 100% !important;
+        height: 100% !important;
+        top: 1250px !important;
+        background-size: contain !important;
+    }
+    .dino-sketch-04 {
+        display: none !important;
+    }
+    .dino-sketch-03 {
+        display: none !important;
+    }
+}
 @media screen and (max-width: 1024px) {
     .bg1 {
         width: 100% !important;
         height: 100% !important;
         background-size: contain !important;
     }
-    .bg2 {
+    /* .bg2 {
         width: 100% !important;
-        /* height: -webkit-fill-available !important; */
         height: 65% !important;
         top: 20% !important;
-        /* background-size: contain !important; */
-    }
+    } */
     .bg2-content {
         margin-top: -25px;
     }
     .bg3 {
         width: 100% !important;
-        height: 45% !important;
-        top: 65% !important;
+        top: 950px !important;
         background-size: contain !important;
     }
     .bg4 {
@@ -43,26 +86,30 @@
         width: 30% !important;
     }
 }
+@media screen and (max-width: 820px) {
+    .bg3 {
+        width: 100% !important;
+        top: 950px !important;
+        background-size: contain !important;
+    }
+}
 @media screen and (max-width: 600px) {
     .bg1 {
         width: 100% !important;
         height: 100% !important;
         background-size: contain !important;
     }
-    .bg2 {
+    /* .bg2 {
         width: 100% !important;
-        /* height: -webkit-fill-available !important; */
         height: 75% !important;
         top: 15% !important;
-        /* background-size: contain !important; */
-    }
+    } */
     .bg2-content {
         margin-top: -25px;
     }
     .bg3 {
         width: 100% !important;
-        height: -webkit-fill-availablema !important;
-        top: 65% !important;
+        top: 75% !important;
         background-size: contain !important;
     }
     .bg4 {
@@ -90,5 +137,12 @@
     }
     .dino-sketch-03 {
         display: none !important;
+    }
+}
+@media screen and (max-width: 400px) {
+    .bg3 {
+        width: 100% !important;
+        top: 640px !important;
+        background-size: contain !important;
     }
 }
