--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,47 @@
+@media screen and (max-width: 1900px) {
+    .bg1 {
+        width: 100% !important;
+        height: 100% !important;
+    }
+    .bg2 {
+        width: 100% !important;
+        /* height: 220% !important; */
+        top: 500px !important;
+    }
+}
+@media screen and (max-width: 1400px) { 
+    .bg2 {
+        width: 100% !important;
+        height: 220% !important;
+        top: 24% !important;
+    }
+    .bg3 {
+        width: 100% !important;
+        height: 100% !important;
+        top: 180% !important;
+        background-size: contain !important;
+    }
+    .dino-twin {
+        margin-top: 385px !important;
+    }
+    .Dilophosaurus {
+        margin-top: -775px !important;
+    }
+}
+@media screen and (max-width: 1242px) {
+    .bg3 {
+        width: 100% !important;
+        height: 100% !important;
+        top: 210% !important;
+        background-size: contain !important;
+    }
+    .dino-sketch-04 {
+        display: none !important;
+    }
+    .dino-sketch-03 {
+        display: none !important;
+    }
+}
 @media screen and (max-width: 1024px) {
     .bg1 {
         width: 100% !important;
@@ -6,7 +50,7 @@
     }
     .bg2 {
         width: 100% !important;
-        height: 80% !important;
+        height: 160% !important;
         top: 24% !important;
     }
     .bg2-content {
@@ -14,8 +58,8 @@
     }
     .bg3 {
         width: 100% !important;
-        height: 45% !important;
-        top: 100% !important;
+        height: 100% !important;
+        top: 105% !important;
         background-size: contain !important;
     }
     .bg4 {
@@ -112,6 +156,13 @@
         position: fixed !important;
     }
 }
+@media screen and (max-width: 820px) {
+    .bg3 {
+        width: 100% !important;
+        top: 1450px !important;
+        background-size: contain !important;
+    }
+}
 @media screen and (max-width: 600px) {
     .bg1 {
         width: 100% !important;
@@ -120,7 +171,7 @@
     }
     .bg2 {
         width: 100% !important;
-        height: 60% !important;
+        height: 80% !important;
         top: 24% !important;
     }
     .bg2-content {
@@ -129,7 +180,7 @@
     .bg3 {
         width: 100% !important;
         height: -webkit-fill-availablema !important;
-        top: 100% !important;
+        top: 750px !important;
         background-size: contain !important;
     }
     .bg4 {
@@ -246,5 +297,25 @@
     .e-text {
         margin-top: 10px !important;
         font-size: 14px !important;
+    }
+}
+@media screen and (max-width: 400px) {
+    .bg3 {
+        width: 100% !important;
+        top: 840px !important;
+        background-size: contain !important;
+    }
+    .dino-twin {
+        margin-top: 195px !important;
+    }
+}
+@media screen and (max-width: 375px) {
+    .bg2 {
+        width: 100% !important;
+        height: 115% !important;
+        top: 25% !important;
+    }
+    .dino-twin {
+        margin-top: 130px !important;
     }
 }
