--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -200,10 +200,9 @@ body {
   margin-top: 1.5em;
 }
 
-
-
 /* ......../ media query /.......... */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1200px) {
+  /* @media screen and (max-width: 1024px) { */
 /* @media screen and (max-width: 820px) { */
   /* @media (max-width: 768px) { */
   .logo-top-bar {
