--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -201,13 +201,30 @@ body {
 }
 
 /* ......../ media query /.......... */
+@media screen and (max-width: 1400px) {
+  .div-logo-top-bar {
+    left: auto !important;
+  }
+  .menu-items li {
+    margin-left: 1.25rem !important;
+  }
+}
 @media screen and (max-width: 1200px) {
   /* @media screen and (max-width: 1024px) { */
 /* @media screen and (max-width: 820px) { */
   /* @media (max-width: 768px) { */
   .logo-top-bar {
-    display: none;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
+  .div-logo-top-bar {
+    top: 2px;
+    right: 14px;
+    left: auto;
+    position: absolute;
+}
   .navbar-container.container {
     right: 0 !important;
     top: 0 !important;
