--- a/css/custom.css
+++ b/css/custom.css
@@ -21,6 +21,14 @@ html,body {
     position: relative;
     height: 100%;
 }
+.page-content {
+    box-sizing: border-box;
+    padding: calc(24px) calc(24px / 2) 60px calc(24px / 2) !important;
+    padding-top: calc(94px);
+    padding-right: calc(12px);
+    padding-bottom: 60px;
+    padding-left: calc(12px);
+}
 .link {
     color: #082524 !important;
 }
@@ -86,7 +94,7 @@ select {
     opacity: 1;
 }
 .diet {
-    bottom: 35px;
+    bottom: 15px;
     position: absolute;
     width: 100%;
 }
@@ -109,6 +117,9 @@ select {
     width: 950px;
     height: 860px;
     position: absolute;
+}
+.m--4 {
+    margin: 1.5rem !important;
 }
 .pic-slide {
     border-radius: 20px;
@@ -160,12 +171,55 @@ select {
         margin-left: 50px !important;
         margin-right: 50px !important;
     }
+    .d-content {
+        margin-left: 25px !important;
+        margin-right: 25px !important;
+    }
+    .font-size-24 {
+        font-size: 16px !important;
+    }
+    .font-size-28 {
+        font-size: 18px !important;
+    }
+    .font-size-32 {
+        font-size: 22px !important;
+    }
+    .font-size-36 {
+        font-size: 26px !important;
+    }
+    .font-size-48 {
+        font-size: 36px !important;
+    }
+    .font-size-64 {
+        font-size: 54px !important;
+    }
+    .font-size-65 {
+        font-size: 55px !important;
+    }
+    .diet {
+        width: 100%;
+        margin-bottom: 25px;
+    }
+    .highlight {
+        top: -450px !important;
+        left: 570px !important;
+    }
+    .m--4 {
+        margin: 0.5rem !important;
+    }
+    .vr {
+        border: none;
+        border-left: 4px solid #C59F83;
+        height: 15vh;
+        width: 1px;
+        margin: 5px 2.5px;
+    }
 }
 
 @media screen and (max-width: 1024px) { 
     .highlight {
-        top: -35px !important;
-        left: 135% !important;
+        top: -325px !important;
+        left: 125% !important;
         width: 100% !important;
         height: auto !important;
     }
@@ -191,20 +245,15 @@ select {
         flex: 0 0 100%;
         max-width: 100%;
     }
-    .font-size-28 {
-        font-size: 18px !important;
-    }
-    .font-size-32 {
-        font-size: 22px !important;
-    }
-    .font-size-36 {
-        font-size: 26px !important;
-    }
-    .font-size-48 {
-        font-size: 36px !important;
-    }
+    
 }
 @media screen and (max-width: 820px) { 
+    .highlight {
+        top: -235px !important;
+        left: 125% !important;
+        width: 100% !important;
+        height: auto !important;
+    }
     .d-pic {
         margin-top: 200px !important;
         margin-left: 30px !important;
@@ -237,6 +286,10 @@ select {
     }
     .head-dino {
         font-size: 32px !important;
+    }
+    .highlight {
+        top: -105px !important;
+        left: 155% !important;
     }
 }
 @media screen and (max-width: 400px) { 
