logo index aboutus

--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -205,6 +205,9 @@ body {
   .div-logo-top-bar {
     left: auto !important;
   }
+  .div-logo-top-bar img {
+    height: 50px !important;
+  }
   .menu-items li {
     margin-left: 1.25rem !important;
   }
@@ -221,7 +224,7 @@ body {
   }
   .div-logo-top-bar {
     top: 2px;
-    right: 14px;
+    right: 20px;
     left: auto;
     position: absolute;
 }
@@ -344,7 +347,6 @@ body {
   html {
     font-size: 65%;
   }
-
   .navbar .menu-items li{
       font-size: 1.6rem;
   }
@@ -390,7 +392,14 @@ body {
     font-weight: 500;
   }
 }
-
+@media (max-width: 900px) {
+  .div-logo-top-bar {
+    left: 75% !important;
+  }
+  .div-logo-top-bar img{
+    height: 45px !important;
+  }
+}
 @media (min-width: 769px) and (max-width: 1200px) {
   .img-container h3 {
     font-size: 1.5rem;
