--- a/css/custom.css
+++ b/css/custom.css
@@ -21,6 +21,11 @@ html,body {
     position: relative;
     height: 100%;
 }
+body {
+    background: url('../img/bg-texturecolor.png');
+    background-repeat: repeat-y;
+    background-repeat: repeat-x;
+}
 .page-content {
     box-sizing: border-box;
     padding: calc(24px) calc(24px / 2) 60px calc(24px / 2) !important;
@@ -87,11 +92,8 @@ select {
 .header-gradient {
     top: 0px;
     left: 0px;
-    width: 100%;
-    height: 200px;
-    background: transparent url('../img/header-gradient.png') 0% 0% no-repeat padding-box;
     position: absolute;
-    opacity: 1;
+    padding: 0;
 }
 .diet {
     bottom: 15px;
@@ -112,10 +114,9 @@ select {
     font-size: 48px;
 }
 .highlight {
-    top: 200px;
+    top: -600px;
     left: 970px;
-    width: 950px;
-    height: 860px;
+    width: 100%;
     position: absolute;
 }
 .m--4 {
@@ -161,6 +162,18 @@ select {
     visibility: visible;
     opacity: 1;
   }
+
+@media screen and (max-width: 2560px) {
+    .highlight {
+        left: 1270px !important;
+    }
+}
+@media screen and (max-width: 1920px) {
+    .highlight {
+        top: -400px !important;
+        left: 870px !important;
+    }
+}
 @media screen and (max-width: 1400px) { 
     .bg1 {
         width: 100% !important;
