--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -218,6 +218,7 @@ body {
   /* @media (max-width: 768px) { */
   .logo-top-bar {
     height: 50px;
+    width: 100% !important;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
